 * Added c() option to app_chanspy. This option allows custom DTMF to be set
   to cycle through the next available channel.  By default this is still '*'.
 * Added x() option to app_chanspy.  This option allows DTMF to be set to
   exit the application.
 * The Voicemail application has been improved to automatically ignore messages
   that only contain silence.
 * The ChanSpy application now has the 's' option, which makes the application
   automatically exit once it hits a point where no more channels are available
   to spy on.

Dialplan Functions
------------------
 * Added new dialplan functions CONNECTEDLINE and REDIRECTING which permits
   setting various connected line and redirecting party information.
 * The CHANNEL() function now supports the "name" option.
 * For DAHDI channels, the CHANNEL() dialplan function now
   supports changing the channel's buffer policy (for the current
   call only), using this syntax:

   exten => s,n,Set(CHANNEL(buffers)=6,full)

   This would change the channel to the 'full' buffer policy and
   6 (six) buffers. Possible options for this setting are the same
   as those in chan_dahdi.conf.
 * For DAHDI channels, the CHANNEL() dialplan function now allows
   the dialplan to request changes in the configuration of the active
   echo canceller on the channel (if any), for the current call only.
   The syntax is:

   exten => s,n,Set(CHANNEL(echocan_mode)=off)

   The possible values are:

     on - normal mode (the echo canceller is actually reinitialized)
     off - disabled
     fax - FAX/data mode (NLP disabled if possible, otherwise completely
           disabled)
     voice - voice mode (returns from FAX mode, reverting the changes that
             were made when FAX mode was requested)
 * Added new dialplan function MASTER_CHANNEL(), which permits retrieving
   and setting variables on the channel which created the current channel.
   Administrators should take care to avoid naming conflicts, when multiple